--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1665,5 +1665,108 @@ stories:
   state: West Virginia
   domain: http://www.morganmessenger.com/
   link: https://www.morganmessenger.com/2019/12/18/myers-road-traffic-light-needs-power/
+images:
+- name: oldroad-old-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sunday.jpg
+- name: oldcabin-oldcabin-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sunday.jpg
+- name: school-clouds-church-clouds-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-feed-people.jpg
+- name: copper-circuit-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-ship-in-seattle.jpg
+- name: aws-s3-desertrun-desertrun-still-2560.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-2560.jpg
+- name: fence-mexico-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-matrix.jpg
+- name: docks-docks-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-pablo-blue.jpg
+- name: stalin-time-statue-with-shield-dark.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-with-shield-dark.jpg
+- name: blossombar-clean-view-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-24-99.jpg
+- name: containership-containership-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-soul.jpg
+- name: fence-mexico-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-light-dali.jpg
+- name: bf-skinner-old-church-in-field.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-church-in-field.jpg
+- name: braceros-domingo-ulloa-london-underground-covent-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-london-underground-covent-garden.jpg
+- name: death-valley-death-valley-national-park-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-monet-one.jpg
+- name: nazi-invasion-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-fishing-ship-in-docks.jpg
+- name: paris-paris-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crunch-paper.jpg
+- name: fence-mexico-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-marcel-duchamp.jpg
+- name: mediterranean-mediterranean-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-aqua.jpg
+- name: stalin-time-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-fire-truck-pulling-out-of-station.jpg
+- name: castle-wall-DSC-0067-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-constitution.JPG
+- name: nazi-invasion-ellis-island-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-ellis-island-windows.jpg
+- name: oldbarn-oldbarn-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-colorful-dream.jpg
+- name: store-on-corner-store-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-two.jpg
+- name: yuma-bank-yuma-bak-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-crafty-painting.jpg
+- name: eduardo-eduardo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-blue-brush.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-soul.jpg
+- name: bordercrossing-bordercrossing-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-rain.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
+- name: la-muse-gauge-on-aircraft-carrier.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-gauge-on-aircraft-carrier.jpg
+- name: rockingchair-rockingchair-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-kandinsky-bv.jpg
+- name: razorcliff-razorcliff-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-alien-goggles.jpg
+- name: old-gas-pumps-oldgaspumps-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-circuit.jpg
+- name: gypsymosaic-gypsy-eyes-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-wols.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-marcel-duchamp.JPG
+- name: birdhouse-birdhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-hot-spicy.jpg
+- name: fence-mexico-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smooth-ride.jpg
+- name: machine-road-machine-road-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-storm.jpg
+- name: oldhouse-oldhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-electricity.jpg
+- name: crow-crow-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-smoking-cigarette.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+- name: paris-paris-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-mucha-mult.jpg
+- name: downtheline-downtheline-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-wols.jpg
+- name: old-house-oldhouse-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-satan-red.jpg
+- name: store-on-corner-store-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crabapple.jpg
+- name: berlinwall-DSC-0084-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colored-circuits.jpg
+- name: stories-containership-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-dali-three.jpg
+- name: eduardo-eduardo-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-wols.jpg
+- name: adam-smith-adam-smith-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colorful-dream.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-jap-dys-1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-dys-1.JPG
+- name: old-granary-field-granaryfield-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-constitution.jpg
 ---
 Rahr To The Rescue.&nbsp;Richards Christmas Parade Saturday.&nbsp;China, Japan, South Korea Meet As North Korean Threat Looms.&nbsp;Mattapans DeSouza Honored For Work At Dorchester Court.&nbsp;Christian Outreach Center To Provide Free Christmas Baskets.&nbsp;Pizza Hut Fundraiser Planned For Next Tuesday.&nbsp;Find Out Where Santa Is Live As Norad Tracks His Progress!.&nbsp;Regional Gasoline Prices Dip For Third Straight Week.&nbsp;
